filesystem: Bail out early for cancelled operations

https://bugzilla.gnome.org/show_bug.cgi?id=725203